--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"node server.js"
+    "start":"vue-cli-service serve"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -46,5 +46,7 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],"engines": {
+    "node": "12.x"
+}
 }
