--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"vue-cli-service serve"
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11"
@@ -46,7 +48,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],"engines": {
+  ],
+  "engines": {
     "node": "12.x"
-}
+  }
 }
